--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=smake
 DB_USERNAME=root
 DB_PASSWORD=
 
+TESTING_DB_CONNECTION=mysql
+TESTING_DB_HOST=127.0.0.1
+TESTING_DB_PORT=3306
+TESTING_DB_DATABASE=testing
+TESTING_DB_USERNAME=root
+TESTING_DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
